big purple pixel

--- a/42-Projects/005-fdf/Makefile
+++ b/42-Projects/005-fdf/Makefile
@@ -6,7 +6,7 @@
 #    By: maalexan <maalexan@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/22 11:13:39 by maalexan          #+#    #+#              #
-#    Updated: 2023/01/27 18:06:51 by maalexan         ###   ########.fr        #
+#    Updated: 2023/01/29 11:09:02 by maalexan         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,4 +22,8 @@ unu:
 fdf:
 	gcc -Wall -Wextra -Werror ./srcs/fdf.c ./libs/libft/libft.a -I ./incl
 
+val:
+	gcc -Wall -Wextra -Werror -g ./srcs/fdf.c ./libs/libft/libft.a -I ./incl -lbsd -lmlx -lXext -lX11 -lm
+
+#valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes -s ./a.out
 #garbage gcc -Wall -Wextra -Lmlx_linux -I /usr/local/include -L/usr/local/lib -Imlx_linux -lXext -lX11 -lm -lz /usr/local/lib/libmlx.a minitest.c
