modeled functions bad makefile

--- a/42-Projects/005-fdf/Makefile
+++ b/42-Projects/005-fdf/Makefile
@@ -10,8 +10,26 @@
 #                                                                              #
 # **************************************************************************** #
 
-all:
-	gcc -Wall -Wextra -Werror ./srcs/fdf.c ./libs/libft/libft.a -I ./incl -lbsd -lmlx -lXext -lX11 -lm
+NAME = fdf
+SRC = ./srcs/
+HDR = -I ./incl/
+FUN = fdf.c management.c validators.c maptreat.c antialias.c utils.c
+CFLAG = -Wall -Wextra -Werror -lm
+MFLAG = -lbsd -lmlx -lXext -lX11
+PFUNC = $(addprefix $(SRC), $(FUN))
+FTLIB = ./libs/libft/libft.a
+OBJ = $(FUN:.c=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJ)
+	cc $(HDR) $(addprefix ./objs/, $(FUN:.c=.o)) $(FTLIB)
+
+$(OBJ): putdir
+	cc $(CFLAG) $(MFLAG) $(HDR) -c ./srcs/$(@:.o=.c) -o ./objs/$@
+
+putdir:
+	mkdir -p objs
 
 learn:
 	gcc -Wall -Werror -Wextra ./learning/minitest.c -lbsd -lmlx -lXext -lX11 -lm
@@ -19,7 +37,7 @@ learn:
 unu:
 	gcc -Wall -Wextra ./learning/minitest.c -lbsd -lmlx -lXext -lX11 -lm
 
-fdf:
+fdfold:
 	gcc -Wall -Wextra -Werror ./srcs/fdf.c ./libs/libft/libft.a -I ./incl
 
 val:
