--- a/42-Projects/005-fdf/Makefile
+++ b/42-Projects/005-fdf/Makefile
@@ -14,8 +14,8 @@ NAME = fdf
 SRC = ./srcs/
 HDR = -I ./incl/
 FUN = fdf.c management.c validators.c maptreat.c antialias.c utils.c
-CFLAG = -Wall -Wextra -Werror -lm
-MFLAG = -lbsd -lmlx -lXext -lX11
+CFLAG = -Wall -Wextra -Werror
+MFLAG = -lbsd -lmlx -lXext -lX11 -lm
 PFUNC = $(addprefix $(SRC), $(FUN))
 FTLIB = ./libs/libft/libft.a
 OBJ = $(FUN:.c=.o)
@@ -23,10 +23,10 @@ OBJ = $(FUN:.c=.o)
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	cc $(HDR) $(addprefix ./objs/, $(FUN:.c=.o)) $(FTLIB)
+	cc $(CFLAG) $(HDR) $(addprefix ./objs/, $(FUN:.c=.o)) $(FTLIB) $(MFLAG) -o fdf
 
 $(OBJ): putdir
-	cc $(CFLAG) $(MFLAG) $(HDR) -c ./srcs/$(@:.o=.c) -o ./objs/$@
+	cc $(CFLAG) -c ./srcs/$(@:.o=.c) $(HDR) -o ./objs/$@ $(MFLAG)
 
 putdir:
 	mkdir -p objs
@@ -37,11 +37,20 @@ learn:
 unu:
 	gcc -Wall -Wextra ./learning/minitest.c -lbsd -lmlx -lXext -lX11 -lm
 
-fdfold:
-	gcc -Wall -Wextra -Werror ./srcs/fdf.c ./libs/libft/libft.a -I ./incl
+gambs:
+	cc -Wall -Werror -Wextra ./srcs/* -I ./incl/ ./libs/libft/libft.a -lbsd -lmlx -lXext -lX11 -lm -o fdf
 
 val:
 	gcc -Wall -Wextra -Werror -g ./srcs/fdf.c ./libs/libft/libft.a -I ./incl -lbsd -lmlx -lXext -lX11 -lm
+
+clean:
+	rm $(addprefix ./objs/, $(FUN:.c=.o))
+	rmdir ./objs
+
+fclean:
+	@rm $(addprefix ./objs/, $(FUN:.c=.o))
+	@rmdir ./objs
+	@rm fdf
 
 #valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes -s ./a.out
 #garbage gcc -Wall -Wextra -Lmlx_linux -I /usr/local/include -L/usr/local/lib -Imlx_linux -lXext -lX11 -lm -lz /usr/local/lib/libmlx.a minitest.c
