--- a/42-Projects/005-fdf/Makefile
+++ b/42-Projects/005-fdf/Makefile
@@ -6,14 +6,14 @@
 #    By: maalexan <maalexan@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/22 11:13:39 by maalexan          #+#    #+#              #
-#    Updated: 2023/03/07 11:03:02 by maalexan         ###   ########.fr        #
+#    Updated: 2023/03/07 11:58:29 by maalexan         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = fdf
 SRC = ./srcs/
 HDR = -I ./incl/
-FUN = fdf.c bonus.c  bresenham.c  color.c  image.c  management.c  maptreat.c  matrix_core.c  matrix_op.c  mouse_bonus.c  translate.c  utils.c
+FUN = fdf.c bonus.c bresenham.c image.c management.c maptreat.c matrix_core.c matrix_op.c mouse_bonus.c translate.c color.c
 CFLAG = -Wall -Wextra -Werror
 MLXINCL = /usr/local/include/mlx.h
 MFLAG = -lbsd -lmlx -lXext -lX11 -lm
