--- a/42-Projects/006-minitalk/Makefile
+++ b/42-Projects/006-minitalk/Makefile
@@ -11,8 +11,8 @@
 # **************************************************************************** #
 
 # Program name
-NAMEA := server
-NAMEBA := server_bonus
+NAME1 := server
+NAME2 := client
 
 # Directories for source, object and libraries
 SRC_DIR := ./srcs
@@ -26,17 +26,26 @@ FTLIB := $(FTLIB_DIR)/libft.a
 CFLAGS := -Wall -Wextra -Werror -I $(HDR_DIR)
 
 # Source files
-FUN := server.c
-FUNB := server_bonus.c
+FUN := mini_utils.c
 
 # Object files
-OBJ := $(FUN:%.c=$(OBJ_DIR)/%.o)
-BOBJ := $(FUNB:%.c=$(OBJ_DIR)/%.o)
+C_OBJ := $(FUN:%.c=$(OBJ_DIR)/%.o) $(OBJ_DIR)/$(NAME2).o
+S_OBJ := $(FUN:%.c=$(OBJ_DIR)/%.o) $(OBJ_DIR)/$(NAME1).o
+BOBJ := $(FUN:%.c=$(OBJ_DIR)/%.o)
 
-all: putdir $(NAMEA)
+all: putdir $(NAME1) $(NAME2)
 
-$(NAMEA): $(FTLIB) $(OBJ)
-	@cc $(OBJ) $(FTLIB) -o $@
+test:
+	@echo $(C_OBJ)
+
+$(NAME1): $(FTLIB) $(S_OBJ)
+	@echo At $@
+	@echo lessthan $<
+	@echo up $^
+	cc $(S_OBJ) $(FTLIB) -o $@
+
+$(NAME2): $(FTLIB) $(C_OBJ)
+	cc $^ -o $@
 
 $(FTLIB):
 	@$(MAKE) -C $(FTLIB_DIR)
@@ -44,9 +53,9 @@ $(FTLIB):
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	cc $(CFLAGS) -c $< -o $@
 
-bonus: putdir $(NAMEBA)
+bonus: putdir $(NAMEB1)
 
-$(NAMEBA): $(FTLIB) $(OBJ) $(BOBJ)
+$(NAMEB1): $(FTLIB) $(BOBJ1)
 	@cc $(BOBJ) $(FTLIB) $(MFLAG) -o $@
 
 $(OBJ_DIR)/%.o: $(BSRC_DIR)/%.c
@@ -61,9 +70,10 @@ clean:
 
 fclean: clean
 	@$(MAKE) -C $(FTLIB_DIR) fclean
-	@[ -f ./server ] && rm server && echo server cleaned || echo Program server isn\'t compiled
+	@[ -f ./$(NAME2) ] && rm $(NAME2) && echo $(NAME2) cleaned || echo Program $(NAME2) isn\'t compiled
+	@[ -f ./$(NAME1) ] && rm $(NAME1) && echo $(NAME1) cleaned || echo Program $(NAME1) isn\'t compiled
 	@[ -f ./minitalk_bonus ] && rm minitalk_bonus && echo bonus cleaned || echo bonus minitalk isn\'t compiled
 
 re: fclean all
 
-.PHONY: all bonus putdir clean fclean re
+.PHONY: all bonus client server putdir clean fclean re
